syntax = "proto3";
package com.temas.aimaster;

import public "common.proto";

message Action {
    Vector2 startPoint = 1;
    Vector2 direction = 2;
    float speed = 3;
}

message ClientInfo {
    int64 timestamp = 1;
    Action action = 2;
}

