syntax = "proto3";

message UpdateRequest {
    required UserInfo userInfo = 1;
}

message UserInfo {
    required string name = 1;
}

